# Password-Generator

./: .gitignore  README.md  pyproject.toml
django_password_generator/: settings.py  urls.py
generator/: views.py
generator/templates/generator/: about.html  home.html  layout.html  password.html
generator/templates/generator/partials/: _navbar.html
