[tool.poetry]
name = "password-generator"
version = "1.0"
description = "Generador de contraseñas random / Random password generator"
authors = ["Your Name <you@example.com>"]
license = "2023-MrTangle"
readme = "README.md"
packages = [{include = "password_generatos"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
